--- a/index.html
+++ b/index.html
@@ -35,6 +35,25 @@
         <section class="about">
             <h3 class="section-title">About Me</h3>
             <p class="sec-des">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <info-description>Mehedi Hasan</info-description>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:
+                        </h4>
+                    <info-description>mehedihasanrony3300@gmail.com</info-description>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of birth:</h4>
+                    <info-description>26 April 2001</info-description>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:</h4>
+                    <info-description>Narail Bangladesh</info-description>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
