--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <nav>
-            <h3 class="nav-title">Me<span class="text-primary">o</span>w</h3>
+            <h3 class="nav-title">Meh<span class="text-primary">edi</span></h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
@@ -22,7 +22,7 @@
         <div class="banner">
             <div>
                 <h3 class="banner-greeting">Hi, I  am</h3>
-                <h1 class="banner-title">Meow Miyan</h1>
+                <h1 class="banner-title">Mehedi Hasan</h1>
                 <p class="banner-des
                 ">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
@@ -62,7 +62,7 @@
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <h3 class="skill-title">Vanilla JavaScript</h3>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List *skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
