--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </section>
         <section>
-            <h3 class="section-title">A Summary of My Resume</h3>
+            <h3 id="resume-title" class="section-title">A Summary of My Resume</h3>
             <div class="resume-cotainer">
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
@@ -133,14 +133,29 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button id="Download" class="btn-primary">Download CV</button>
             </div>
-                
-        
         </section>
     </main>
     <footer>
-
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="footer-des">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-links">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+            </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea placeholder="Message" name="" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
