--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/66baafa21a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -25,8 +26,8 @@
                 <h1 class="banner-title">Mehedi Hasan</h1>
                 <p class="banner-des
                 ">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-contact">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV </button>
+                <button class="btn-contact"><i class="fa-solid fa-phone"></i> Contact </button>
             </div>
             <img class="profile-pic" src="images/mehedi.png" alt="">
         </div>
@@ -133,7 +134,7 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button id="Download" class="btn-primary">Download CV</button>
+                <button id="Download" class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV </button>
             </div>
         </section>
     </main>
